force-app/main/default/objects/CRMF_Error__c/CRMF_Error__c.object-meta.xml
<CustomObject>
    <description>This object is a log of all errors from flow faults.</description>
    <label>Error</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>