force-app/main/default/objects/CRMF_Error__c/fields/CRMF_CurrentRecordID__c.field-meta.xml
<CustomField>
    <fullName>CRMF_CurrentRecordID__c</fullName>
    <description>The current record ID being used when this flow created this error record.</description>
    <inlineHelpText>The current record ID being used when this flow created this error record.</inlineHelpText>
    <label>Current Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>