force-app/main/default/objects/CRMF_Error__c/fields/CRMF_DateTime__c.field-meta.xml
<CustomField>
    <fullName>CRMF_DateTime__c</fullName>
    <description>The date/time that this error occured.</description>
    <inlineHelpText>The date/time that this error occured.</inlineHelpText>
    <label>Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>