force-app/main/default/objects/CRMF_Error__c/fields/CRMF_FaultMessage__c.field-meta.xml
<CustomField>
    <fullName>CRMF_FaultMessage__c</fullName>
    <description>The fault message for this error record.</description>
    <inlineHelpText>The fault message for this error record.</inlineHelpText>
    <label>Fault Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>