force-app/main/default/objects/CRMF_Error__c/fields/CRMF_InterviewGUID__c.field-meta.xml
<CustomField>
    <fullName>CRMF_InterviewGUID__c</fullName>
    <description>The Flow Interview GUID of the flow that created this error record.</description>
    <label>Interview GUID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>