force-app/main/default/objects/CRMF_Error__c/fields/CRMF_InterviewStartTime__c.field-meta.xml
<CustomField>
    <fullName>CRMF_InterviewStartTime__c</fullName>
    <description>The date/time that the flow (interview) that created this error record started.</description>
    <inlineHelpText>The date/time that the flow (interview) that created this error record started.</inlineHelpText>
    <label>Interview Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>