force-app/main/default/objects/CRMF_Error__c/fields/CRMF_User__c.field-meta.xml
<CustomField>
    <fullName>CRMF_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that launched the flow that created this error record.</description>
    <inlineHelpText>The user that launched the flow that created this error record.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Errors</relationshipName>
    <type>Lookup</type>
</CustomField>